--- a/rebar.config
+++ b/rebar.config
@@ -7,10 +7,12 @@
     debug_info
 ]}.
 
+{deps_dir, "../"}.
+
 {deps,
  [
-  {lager, "2.2.1",
-    {git, "git://github.com/basho/lager.git", {tag, "2.2.1"}}}
+  {lager, ".*",
+    {git, "https://github.com/imdeps/lager.git", {tag, "release"}}}
  ]}.
 
 {cover_enabled, true}.
