--- a/rebar.config
+++ b/rebar.config
@@ -12,7 +12,7 @@
 {deps,
  [
   {lager, ".*",
-    {git, "https://github.com/imdeps/lager.git", {branch, "release"}}}
+    {git, "https://github.com/imdeps/lager.git", "release"}}
  ]}.
 
 {cover_enabled, true}.
